增加新参数和对应参数功能，补充部分判断逻辑